# multistream_plugin_button

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  COPYRIGHT  README.md  report_creating_obs_plugin.md
.github/workflows/: release.yml
data/locale/: de-DE.ini  en-US.ini  pl-PL.ini
src/: config_io.cpp  config_io.h  destination_rules.cpp  destination_rules.h  dock_ui.cpp  dock_ui.h  multistream_manager.cpp  multistream_manager.h  multistream_manager_signals.cpp  multistream_raii.h  plugin-main.cpp  plugin_state.cpp  plugin_state.h  stream_key_storage.cpp  stream_key_storage.h  version.rc
tests/: config_io_tests.cpp  destination_rules_tests.cpp  dock_refresh_stub.cpp  multistream_manager_unit_stub.cpp  plugin_state_test_stub.cpp  test_main.cpp
